--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "kantuni-am",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "preview": "astro preview"
   },
   "dependencies": {
+    "@picocss/pico": "^2.0.6",
     "astro": "^5.0.9"
   }
 }
