--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "@picocss/pico": "^2.0.6",
-    "astro": "^5.0.9"
+    "@picocss/pico": "^2.0.6"
+  },
+  "devDependencies": {
+    "astro": "^5.1.1",
+    "astro-purgecss": "^5.0.0",
+    "purgecss": "^7.0.2"
   }
 }
